misc/openapi-ballerina/modules/openapi-validator/src/test/resources/project-based-tests/src/resourceHandle/ballerina/invalid/petstoreFunctionNode.bal
import ballerina/http;
import ballerina/openapi;

listener http:Listener ep0 = new(80, config = {host: "petstore.openapi.io"});

listener http:Listener ep1 = new(443, config = {host: "petstore.swagger.io"});

@openapi:ServiceInfo {
    contract: "resources/petstore.yaml",
    tags: [ ]
}
@http:ServiceConfig {
    basePath: "/v1"
}

service petstore on ep0, ep1 {
    @http:ResourceConfig {
        methods:["GET"],
        path:"/pets/{petId}"
    }
    resource function showPetById (http:Caller caller, http:Request req,  int petId) returns error? {

    }

}
